fixed javascript and UI fixes

--- a/app/assets/stylesheets/browse.css.scss
+++ b/app/assets/stylesheets/browse.css.scss
@@ -119,7 +119,7 @@ input#search{
 		text-decoration: none;
 		border: 1px solid #9aafe5;
 		&:hover, &:focus {
-			background-color: transparent;
+			//background-color: transparent;
 		}
 	}
 	.page-info {
