--- a/app/assets/stylesheets/allocated_tasks.css.scss
+++ b/app/assets/stylesheets/allocated_tasks.css.scss
@@ -13,9 +13,11 @@
 
 .title-banner {
 	padding: 10px !important;
+	margin-bottom: 0px !important;
+	background-color: #F8F8F8 !important;
 }
 
-.op-body-bg-col-lable {
+.op-body-bg-col-label {
 	background-color: #F8F8F8 !important;
 	border-color: white !important;
 	padding: 0px !important;
@@ -66,4 +68,9 @@
 .writer-label {
  	font-size: 13px !important; 	
  	margin-bottom: 0px !important;
+}
+
+.tasks-queue {
+	width: 100% !important;
+	margin: 0px !important;
 }
