--- a/app/views/browse/search.html.erb
+++ b/app/views/browse/search.html.erb
@@ -27,37 +27,32 @@
                   </td>
 
                   <td class="col-md-1">
-                    <form action="limit" method="get">
-                      <label class="toggle-btn radio black-text">
-                        <input id="thirty_days_left" name="within" type="radio" value=30 checked="false">30 Days
-                      </label> 
-                      <label class="toggle-btn radio black-text">
-                        <input id="sixty_days_left" name="within" type="radio" value=60 checked="false">60 Days
-                      </label>
-                      <label class="toggle-btn radio black-text">
-                        <input id="ninety_days_left" name="within" type="radio" value=90 checked="false">90 Days
-                      </label> 
-                      <label class="toggle-btn radio black-text">
-                        <input id="all-days" name="within" type="radio" value=999999 checked="true">90+ Days
-                      </label> 
+                    <!--form action="limit" method="get"-->
+                    <div>
+                      <div class="toggle-btn radio black-text" id="within" name="within">
+                        <input id="thirty_days_left" name="limiting" type="radio" value="30" checked="false">30 Days
+                        <br>
+                  
+                        <input id="sixty_days_left" name="limiting" type="radio" value="60" checked="false">60 Days
+                        <br>
+                      
+                        <input id="ninety_days_left" name="limiting" type="radio" value="90" checked="false">90 Days
+                        <br>
+                      
+                        <input id="all-days" name="limiting" type="radio" value="999999" checked="true">90+ Days
+                      </div> 
                       <td>
-                        <button name="radio-style-btn" type="submit" class="btn btn-info btn-lg glyphicon selector-button control-label-button">&#xe092;</button>
+                        <a href="#" name="radio-style-btn" class="btn btn-info btn-lg glyphicon selector-button control-label-button">&#xe092;</a>
                       </td>
-                    </form>
+                    </div>
+                    <!--/form-->
                   </td>
-
-
                 </div>
-
-                <!-- this is the space between the radio buttons and the drop down menu for sorting.
-                    it prevents the ratio of clicking not to be a random place on the screen -->
-                <td class="col-md-6">
-                </td>
 
                 <!-- drop down menu in Browse Page to sort the opportunities by a specific field -->
                 <div class="col-md-2">
                   <td class="col-md-1">
-                    <label class="black-text">
+                    <label class="black-text sort-dropdown-label">
                       Sort By:
                     </label>
                   </td>
@@ -73,19 +68,20 @@
                         <option id="opt7" value="proposalMgr">Proposal Managers</option>
                         <option id="opt8" value="value">Value</option>
                       </select>
-                          
+                      
                       <a href="#" name="sort-btn" class="btn btn-info btn-lg glyphicon selector-button">&#xe092;</a>
                     </div>  
                   </td>
                 </div>
+                <td class="col-md-1"></td>
               </tr>
             </table>
-          </div>    
+          </div>
         </div>    
       <br>
     </div>
 
-    <caption><h2 class="black-text" style="text-align: center;">Opportunities</h2></caption>
+    <h2 class="black-text browse-page-title">Opportunities</h2>
 
     <div class="row" style="font-weight: bold;">
       <div class="col-md-2" style="text-align: center;"> Opportunity ID </div>
@@ -150,10 +146,8 @@
         <div name="paginate-div"><%= will_paginate @oppties, previous_label: h("<"), next_label: h(">") %></div>
       </div>
     </div>
-
-
-
   </div>
+  
 
 
   <script>
@@ -183,44 +177,78 @@
         window.location.assign(window.location.href.substring (0, window.location.href.indexOf("sort")));
       else if (select == "none")
         window.location.assign( window.location.href );
-      else if (select == "proposalDueDate")
-        window.location.assign( window.location.href + "&sort=proposalDueDate" );
-      else if (select == "opptyName")
-        window.location.assign(window.location.href + "&sort=opptyName");
-      else if (select == "opptyId")
-        window.location.assign(window.location.href + "&sort=opptyId");
-      else if (select == "captureMgr")
-        window.location.assign(window.location.href + "&sort=captureMgr");
-      else if (select == "programMgr")
-        window.location.assign(window.location.href + "&sort=programMgr");
-      else if (select == "proposalMgr")
-        window.location.assign(window.location.href + "&sort=proposalMgr");
-      else if (select == "value")
-        window.location.assign(window.location.href + "&sort=value");
+      else if (window.location.href.substring(window.location.href.indexOf("/browse/index"), window.location.href.toString().length ) == "<%= browse_index_path %>") {
+        if (select == "proposalDueDate")
+          window.location.assign( window.location.href + "?sort=proposalDueDate" );
+        else if (select == "opptyName")
+          window.location.assign(window.location.href + "?sort=opptyName");
+        else if (select == "opptyId")
+          window.location.assign(window.location.href + "?sort=opptyId");
+        else if (select == "captureMgr")
+          window.location.assign(window.location.href + "?sort=captureMgr");
+        else if (select == "programMgr")
+          window.location.assign(window.location.href + "?sort=programMgr");
+        else if (select == "proposalMgr")
+          window.location.assign(window.location.href + "?sort=proposalMgr");
+        else if (select == "value")
+          window.location.assign(window.location.href + "?sort=value");
+      }
+      else {
+        if (select == "proposalDueDate")
+          window.location.assign( window.location.href + "&sort=proposalDueDate" );
+        else if (select == "opptyName")
+          window.location.assign(window.location.href + "&sort=opptyName");
+        else if (select == "opptyId")
+          window.location.assign(window.location.href + "&sort=opptyId");
+        else if (select == "captureMgr")
+          window.location.assign(window.location.href + "&sort=captureMgr");
+        else if (select == "programMgr")
+          window.location.assign(window.location.href + "&sort=programMgr");
+        else if (select == "proposalMgr")
+          window.location.assign(window.location.href + "&sort=proposalMgr");
+        else if (select == "value")
+          window.location.assign(window.location.href + "&sort=value");
+      }
     });
 
     $(document).on("click", "a[name='radio-style-btn']", function (e) {
-      select = document.getElementById('limiting').value;
+      var radioButtons = $("#within input:radio[name='limiting']");
+      var selectedIndex = radioButtons.index(radioButtons.filter(':checked'));
+      select = document.getElementsByName('limiting')[selectedIndex].value;
       if (window.location.href.indexOf("within") > -1) {
         var url = window.location.toString();
-        if (window.location.href.indexOf(999999) > -1)
-          window.location = url.replace(/within=999999/, 'within='+select);
-        else if (window.location.href.indexOf(30) > -1)
-          window.location = url.replace(/within=30/, 'within='+select);
-        else if (window.location.href.indexOf(60) > -1)
-          window.location = url.replace(/within=60/, 'within='+select);
-        else if (window.location.href.indexOf(90) > -1)
-          window.location = url.replace(/within=90/, 'within='+select);
+        if (window.location.href.indexOf("within=999999") > -1)
+          window.location.href = url.replace(/within=999999/, 'within='+select);
+        else if (window.location.href.indexOf("within=30") > -1)
+          window.location.href = url.replace(/within=30/, 'within='+select);
+        else if (window.location.href.indexOf("within=60") > -1)
+          window.location.href = url.replace(/within=60/, 'within='+select);
+        else if (window.location.href.indexOf("within=90") > -1)
+          window.location.href = url.replace(/within=90/, 'within='+select);
       }
-      else if (select == 999999)
-        window.location.assign( window.location.href );
-      else if (select == 30)
-        window.location.assign( window.location.href + "?within=30" );
-      else if (select == 60)
-        window.location.assign(window.location.href + "?within=60");
-      else if (select == 90)
-        window.location.assign(window.location.href + "?within=90");
+      else if (window.location.href.substring(window.location.href.indexOf("/browse/index"), window.location.href.toString().length ) == "<%= browse_index_path %>") {
+        if (select == 999999)
+          window.location.assign( window.location.href );
+        else if (select == 30)
+          window.location.assign( window.location.href + "?within=30" );
+        else if (select == 60)
+          window.location.assign(window.location.href + "?within=60");
+        else if (select == 90)
+          window.location.assign(window.location.href + "?within=90");
+      }
+      else {
+        if (select == 999999)
+          window.location.assign( window.location.href );
+        else if (select == 30)
+          window.location.assign( window.location.href + "&within=30" );
+        else if (select == 60)
+          window.location.assign(window.location.href + "&within=60");
+        else if (select == 90)
+          window.location.assign(window.location.href + "&within=90");
+      }
+
     });
+
 
     window.onload = function() {
       console.log("Inside function");
