--- a/app/views/browse/search.html.erb
+++ b/app/views/browse/search.html.erb
@@ -27,16 +27,15 @@
                   </td>
 
                   <td class="col-md-1">
-                    <!--form action="limit" method="get"-->
                     <div>
                       <div class="toggle-btn radio black-text" id="within" name="within">
-                        <input id="thirty_days_left" name="limiting" type="radio" value="30" checked="false">30 Days
+                        <input id="thirty_days_left" name="limiting" type="radio" value="30">30 Days
                         <br>
                   
-                        <input id="sixty_days_left" name="limiting" type="radio" value="60" checked="false">60 Days
+                        <input id="sixty_days_left" name="limiting" type="radio" value="60">60 Days
                         <br>
                       
-                        <input id="ninety_days_left" name="limiting" type="radio" value="90" checked="false">90 Days
+                        <input id="ninety_days_left" name="limiting" type="radio" value="90">90 Days
                         <br>
                       
                         <input id="all-days" name="limiting" type="radio" value="999999" checked="true">90+ Days
@@ -45,7 +44,6 @@
                         <a href="#" name="radio-style-btn" class="btn btn-info btn-lg glyphicon selector-button control-label-button">&#xe092;</a>
                       </td>
                     </div>
-                    <!--/form-->
                   </td>
                 </div>
 
@@ -147,7 +145,7 @@
       </div>
     </div>
   </div>
-  
+
 
 
   <script>
@@ -248,6 +246,39 @@
       }
 
     });
+    
+
+    window.onload = function() {
+      if (window.location.href.indexOf("within") > -1) {
+        if (window.location.href.indexOf("within=999999") > -1)
+          document.getElementById("all_days").checked = true;
+        else if (window.location.href.indexOf("within=30") > -1)
+          document.getElementById("thirty_days_left").checked = true;
+        else if (window.location.href.indexOf("within=60") > -1)
+          document.getElementById("sixty_days_left").checked = true;
+        else if (window.location.href.indexOf("within=90") > -1)
+          document.getElementById("ninety_days_left").checked = true;
+      }
+
+      if (window.location.href.indexOf("sort")){
+        if (window.location.href.indexOf("none") > -1)
+          document.getElementById("opt1").selected = true;
+        else if (window.location.href.indexOf("opptyName") > -1)
+          document.getElementById("opt2").selected = true;
+        else if (window.location.href.indexOf("opptyId") > -1)
+          document.getElementById("opt3").selected = true;
+        else if (window.location.href.indexOf("proposalDueDate") > -1)
+          document.getElementById("opt4").selected = true;
+        else if (window.location.href.indexOf("captureMgr") > -1)
+          document.getElementById("opt5").selected = true;
+        else if (window.location.href.indexOf("programMgr") > -1)
+          document.getElementById("opt6").selected = true;
+        else if (window.location.href.indexOf("proposalMgr") > -1)
+          document.getElementById("opt7").selected = true;
+        else if (window.location.href.indexOf("value") > -1)
+          document.getElementById("opt8").selected = true;
+      }
+    }
 
 
     window.onload = function() {
