invalid data page

--- a/app/views/browse/index.html.erb
+++ b/app/views/browse/index.html.erb
@@ -130,7 +130,7 @@
             <div class="media row">
               <div class="col-md-2" style="text-align: center;"><%= o.opptyId %></div>
               <div class="col-md-6">
-                <div class="regular-text"><%= link_to o.opptyName, o %></div>
+                <div class="regular-text a:visited"><%= link_to o.opptyName, o %></div>
                 <div class="little-text"><%= o.slComments %></div>
               </div>
               <div class="col-md-2"><%= o.proposalDueDate.to_s %></div>
