--- a/app/views/invalid_data/search.html.erb
+++ b/app/views/invalid_data/search.html.erb
@@ -209,8 +209,8 @@
 
     });
     
-
     window.onload = function() {
+
       if (window.location.href.indexOf("within") > -1) {
         if (window.location.href.indexOf("within=999999") > -1)
           document.getElementById("all_days").checked = true;
@@ -240,8 +240,31 @@
         else if (window.location.href.indexOf("value") > -1)
           document.getElementById("opt8").selected = true;
       }
+
+
+
+      console.log("Inside function");
+      if (document.cookie.indexOf('mycookie')==-1||document.cookie.indexOf('mycookie')==0) {
+        console.log("This is NOT a Refresh");
+        // cookie doesn't exist, create it now
+        document.cookie = 'mycookie=1';
+      }
+      else {
+        console.log("This is a Refresh and " + document.cookie.indexOf('mycookie'));
+        // reset cookie
+        delete_cookie('mycookie');
+        // not first visit, so alert
+        location.href = '<%=browse_index_path%>';
+      }
     }
 
+    function delete_cookie(name) {
+      document.cookie = name + '=-1; expires=Thu, 01 Jan 1970 00:00:01 GMT;';
+    }
+
+    $(document).on("click", "input[name='searchButton']", function (e) {
+      delete_cookie('mycookie');
+    });
   </script>
 
 </body>
