--- a/app/views/histories/search.html.erb
+++ b/app/views/histories/search.html.erb
@@ -219,6 +219,30 @@
         else if (window.location.href.indexOf("value") > -1)
           document.getElementById("opt8").selected = true;
       }
+
+      console.log("Inside function");
+      if (document.cookie.indexOf('mycookie')==-1||document.cookie.indexOf('mycookie')==0) {
+        console.log("This is NOT a Refresh");
+        // cookie doesn't exist, create it now
+        document.cookie = 'mycookie=1';
+      }
+      else {
+        console.log("This is a Refresh and " + document.cookie.indexOf('mycookie'));
+        // reset cookie
+        delete_cookie('mycookie');
+        // not first visit, so alert
+        location.href = '<%=browse_search_path%>';
+      }
+    }
+
+    function delete_cookie(name) {
+      document.cookie = name + '=-1; expires=Thu, 01 Jan 1970 00:00:01 GMT;';
+    }
+
+    $(document).on("click", "input[name='searchButton']", function (e) {
+      delete_cookie('mycookie');
+    });
+
     }
 
   </script>
