--- a/app/views/browse/index.html.erb
+++ b/app/views/browse/index.html.erb
@@ -3,7 +3,23 @@
   <div class="jumbotron">
     <div class="upper-search-box">
     	<div class="inner-search-bar col-md-12">
-    		<form method="get" action="search" class="search-form"> 
+    		
+      <table cellpadding="0px" cellspacing="0px" class="col-md-12">
+        <tr style="font-size:24px;">
+        <td class="col-md-1"></td>
+        <td class="col-md-10" style="padding-top: 15px !important;">
+        <%= form_tag(browse_index_path, :method => "get", id: "search-form" ) do %>
+        <%= text_field_tag :search, params[:search], placeholder: "Search" %>
+        <input id="search-button" class="btn-search" type="image" src="/assets/search.png" alt="Submit_tag"> 
+          </td>
+          
+          <td class="col-md-1"></td>
+        <% end %>
+        </tr>
+      </table>
+
+
+        <!--<form method="get" action="search" class="search-form"> 
           <table cellpadding="0px" cellspacing="0px" class="col-md-12">
             <tr style="font-size:24px;">
               <td class="col-md-12">
@@ -14,7 +30,7 @@
               </td>
             </tr>  
           </table>
-        </form>
+        </form> -->
     			<!-- Radio Buttons in Browse page to limit the search to opportunities within 30, 60, or 90 days -->
           <div class="form">
             <table>
@@ -112,6 +128,19 @@
 
 
   <script>
+    /* creates style rule programmatically after AmCharts logo exists */
+      function createClass(name,rules){
+          var style = document.createElement('style');
+          style.type = 'text/css';
+          document.getElementsByTagName('head')[0].appendChild(style);
+          if(!(style.sheet||{}).insertRule) 
+              (style.styleSheet || style.sheet).addRule(name, rules);
+          else
+              style.sheet.insertRule(name+"{"+rules+"}",0);
+      }
+      /* hides the amCharts logo */
+      createClass('html body div div div.inner-search-bar.col-md-12 table.col-md-12 tbody tr td.col-md-10 form#search-form input#search',"width: 96.15% !important; padding-left: 10px !important;");
+
 
     $(document).on("click", "a[name='sort-btn']", function (e) {
       select = document.getElementById('sorting').value;
