--- a/app/views/allocated_tasks/index.html.erb
+++ b/app/views/allocated_tasks/index.html.erb
@@ -96,7 +96,7 @@
                 <% end %>
                 <ul>
                     <li>
-                        <a class="col-md-12" href="#" onclick="swap('<%= name %>'+'todo');return false;">
+                        <a class="col-md-12" href="#" onclick="swap('<%= name %>'+'doing');return false;">
                             <p class="col-md-8 writer-label"><%= name %> </p>
                             <p class="col-md-4 writer-label"><%= count.to_s + " tasks"%></p>
                         </a>
@@ -121,7 +121,7 @@
                 <% end %>
                 <ul>
                     <li>
-                        <a class="col-md-12" href="#" onclick="swap('<%= name %>'+'todo');return false;">
+                        <a class="col-md-12" href="#" onclick="swap('<%= name %>'+'done');return false;">
                             <p class="col-md-8 writer-label"><%= name %> </p>
                             <p class="col-md-4 writer-label"><%= count.to_s + " tasks"%></p>
                         </a>
