--- a/app/views/invalid_data/index.html.erb
+++ b/app/views/invalid_data/index.html.erb
@@ -3,79 +3,79 @@
   <div class="jumbotron">
     <div class="upper-search-box">
     	<div class="inner-search-bar col-md-12">
-    		<form method="get" action="search" class="search-form"> 
-          <table cellpadding="0px" cellspacing="0px" class="col-md-12">
-            <tr style="font-size:24px;">
-              <td class="col-md-12">
-                <input id="search" name="search" type="text" placeholder="Search" class="col-md-12" value="">
-              </td>
-              <td class="col-md-1">
-                   <input id="search-button" class="btn-search" type="image" src="/assets/search.png" alt="Submit_tag"> 
-              </td>
-            </tr>  
-          </table>
-        </form>
+    		<table cellpadding="0px" cellspacing="0px" class="col-md-12">
+          <tr style="font-size:24px;">
+            <td class="col-md-1"></td>
+            <td class="col-md-10" style="padding-top: 15px !important;">
+              <%= form_tag(browse_index_path, :method => "get", id: "search-form" ) do %>
+                <%= text_field_tag :search, params[:search], placeholder: "Search" %>
+                <input id="search-button" class="btn-search" type="image" src="/assets/search.png" alt="Submit_tag"> 
+                <td class="col-md-1"></td>
+              <% end %>
+            </td>
+          </tr>
+        </table>
     		<!-- Radio Buttons in Invalid Data page to limit the search to opportunities within 30, 60, or 90 days -->
-          <div class="form">
-            <table>
-              <tr>
-                <div class="col-md-9">
-                  <td class="col-md-1">
-                    <label class="black-text field-label" style="padding-left: 101px;">
-                  		Within:
-                		</label>
-              		</td>
+        <div class="form">
+          <table>
+            <tr>
+              <div class="col-md-9">
+                <td class="col-md-1">
+                  <label class="black-text field-label" style="padding-left: 101px;">
+                		Within:
+              		</label>
+            		</td>
 
-                	<td class="col-md-1">
-                    <div>
-                      <div class="toggle-btn radio black-text" id="within" name="within">
-                        <input id="thirty_days_left" name="limiting" type="radio" value="30">30 Days
-                        <br>
-                  
-                        <input id="sixty_days_left" name="limiting" type="radio" value="60">60 Days
-                        <br>
-                      
-                        <input id="ninety_days_left" name="limiting" type="radio" value="90">90 Days
-                        <br>
-                      
-                        <input id="all-days" name="limiting" type="radio" value="999999" checked="true">90+ Days
-                      </div> 
-                      <td>
-                        <a href="#" name="radio-style-btn" class="btn btn-info btn-lg glyphicon selector-button control-label-button">&#xe092;</a>
-                      </td>
-                    </div>
-                  </td>
-                </div>
+              	<td class="col-md-1">
+                  <div>
+                    <div class="toggle-btn radio black-text" id="within" name="within">
+                      <input id="thirty_days_left" name="limiting" type="radio" value="30">30 Days
+                      <br>
+                
+                      <input id="sixty_days_left" name="limiting" type="radio" value="60">60 Days
+                      <br>
+                    
+                      <input id="ninety_days_left" name="limiting" type="radio" value="90">90 Days
+                      <br>
+                    
+                      <input id="all-days" name="limiting" type="radio" value="999999" checked="true">90+ Days
+                    </div> 
+                    <td>
+                      <a href="#" name="radio-style-btn" class="btn btn-info btn-lg glyphicon selector-button control-label-button">&#xe092;</a>
+                    </td>
+                  </div>
+                </td>
+              </div>
 
-                <!-- drop down menu in Invalid Data Page to sort the opportunities by a specific field -->
-                <div class="col-md-2">
-                  <td class="col-md-1">
-                		<label class="black-text sort-dropdown-label">
-                  		Sort By:
-                		</label>
-                  </td>
-                	<td class="col-md-3">
-    				  <div>
+              <!-- drop down menu in Invalid Data Page to sort the opportunities by a specific field -->
+              <div class="col-md-2">
+                <td class="col-md-1">
+              		<label class="black-text sort-dropdown-label">
+                		Sort By:
+              		</label>
+                </td>
+              	<td class="col-md-3">
+    				      <div>
                 		<select class="selector col-md-9" id="sorting" name="sorting">
-	                  		<option id="opt1" value="none">none</option>
-	                        <option id="opt2" value="opptyName">Opportunity Name</option>
-	                        <option id="opt3" value="opptyId">Opportunity ID</option>
-	                        <option id="opt4" value="proposalDueDate">Days Left</option>
-	                        <option id="opt5" value="captureMgr">Capture Managers</option>
-	                        <option id="opt6" value="programMgr">Program Managers</option>
-	                        <option id="opt7" value="proposalMgr">Proposal Managers</option>
-	                        <option id="opt8" value="value">Value</option>
-            			</select>
+	                  	<option id="opt1" value="none">none</option>
+	                    <option id="opt2" value="opptyName">Opportunity Name</option>
+	                    <option id="opt3" value="opptyId">Opportunity ID</option>
+	                    <option id="opt4" value="proposalDueDate">Days Left</option>
+	                    <option id="opt5" value="captureMgr">Capture Managers</option>
+	                    <option id="opt6" value="programMgr">Program Managers</option>
+	                    <option id="opt7" value="proposalMgr">Proposal Managers</option>
+	                    <option id="opt8" value="value">Value</option>
+            		    </select>
                       
                 		<a href="#" name="sort-btn" class="btn btn-info btn-lg glyphicon selector-button">&#xe092;</a>
-              		  </div>  
-                  </td>
-                </div>
-                <td class="col-md-1"></td>
-              </tr>
-            </table>
-          </div>
-        </div>		
+              		</div>  
+                </td>
+              </div>
+              <td class="col-md-1"></td>
+            </tr>
+          </table>
+        </div>
+      </div>		
       <br>
     </div>
 
