--- a/app/assets/stylesheets/allocated_tasks.css.scss
+++ b/app/assets/stylesheets/allocated_tasks.css.scss
@@ -15,7 +15,7 @@
 	padding: 10px !important;
 }
 
-.op-body-bg-col-lable {
+.op-body-bg-col-label {
 	background-color: #F8F8F8 !important;
 	border-color: white !important;
 	padding: 0px !important;
