--- a/app/views/allocated_tasks/index.html.erb
+++ b/app/views/allocated_tasks/index.html.erb
@@ -24,17 +24,17 @@
     	<div class="textColor">
             <!-- Formatting hack -->
     		<div class="row-2">
-                <div class="col-md-3 op-body-bg-col-lable" style="min-height: 0px !important;">
+                <div class="col-md-3 op-body-bg-col-label" style="min-height: 0px !important;">
                 </div>
-    			<div class="col-md-3 op-body-bg-col-lable" style="min-height: 0px !important;">
+    			<div class="col-md-3 op-body-bg-col-label" style="min-height: 0px !important;">
     			</div>
-     			<div class="col-md-3 op-body-bg-col-lable" style="min-height: 0px !important;">
+     			<div class="col-md-3 op-body-bg-col-label" style="min-height: 0px !important;">
      			</div>
-    			<div class="col-md-3 op-body-bg-col-lable" style="min-height: 0px !important;">
+    			<div class="col-md-3 op-body-bg-col-label" style="min-height: 0px !important;">
     			</div>
     		</div>
 		</div>
-        <div class="col-md-3 op-body-bg-col-lable" id="navigation">
+        <div class="col-md-3 op-body-bg-col-label" id="navigation">
             <%@name_dict.each do |id, name|%>
                 <% count = 0 %>
                 <%if @assigned_writer_dict[id].present? %>
@@ -59,7 +59,7 @@
                 </ul>
             <%end%>
         </div>
-        <div class="col-md-3 op-body-bg-col-lable" id="navigation">
+        <div class="col-md-3 op-body-bg-col-label" id="navigation">
             <%@name_dict.each do |id, name|%>
                 <% count = 0 %>
                 <%if @todo_writer_dict[id].present? %>
@@ -86,7 +86,7 @@
                 </ul>
             <%end%>
         </div>
-        <div class="col-md-3 op-body-bg-col-lable" id="navigation">
+        <div class="col-md-3 op-body-bg-col-label" id="navigation">
             <%@name_dict.each do |id, name|%>
                 <% count = 0 %>
                 <%if @doing_writer_dict[id].present?%>
@@ -111,7 +111,7 @@
                 </ul>
             <%end%>
         </div>
-        <div class="col-md-3 op-body-bg-col-lable" id="navigation">
+        <div class="col-md-3 op-body-bg-col-label" id="navigation">
             <%@name_dict.each do |id, name|%>
                 <% count = 0 %>
                 <%if @done_writer_dict[id].present?%>
