--- a/app/views/histories/index.html.erb
+++ b/app/views/histories/index.html.erb
@@ -6,6 +6,7 @@
         <table cellpadding="0px" cellspacing="0px" class="col-md-12">
           <tr style="font-size:24px;">
             <td class="col-md-1"></td>
+            <!-- serach field holds the value that is searched -->
             <td class="col-md-10" style="padding-top: 15px !important;">
               <%= form_tag(histories_path, :method => "get", id: "search-form" ) do %>
                 <%= text_field_tag :search, params[:search], placeholder: "Search" %>
