fixed hover transparency

--- a/app/assets/stylesheets/browse.css.scss
+++ b/app/assets/stylesheets/browse.css.scss
@@ -78,6 +78,10 @@ td {
 	border-color: #005DA0 !important;
 }
 
+.selector-button:hover {
+	background-color: #005DA0 !important;
+}
+
 .control-label-button {
 	float: left !important;
 }
