assign and edit pages

--- a/app/assets/stylesheets/assign.css.scss
+++ b/app/assets/stylesheets/assign.css.scss
@@ -1,3 +1,10 @@
 // Place all the styles related to the Assign controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.assigned-jumbotron {
+	min-height: 600px !important;
+	margin-right: 50px !important;
+	margin-left: 50px !important;
+	margin-bottom: 30px !important;
+}
