--- a/app/assets/stylesheets/oppties.css.scss
+++ b/app/assets/stylesheets/oppties.css.scss
@@ -22,3 +22,16 @@
 .comment-paragraph {
 	line-height: 110%;
 }
+
+.field-title {
+	padding-left: 20px;
+}
+
+.link-text a:link {
+	color: #0000FF;
+	background-color: transparent !important;
+}
+
+.link-text a:visited {
+    color: #663366 !important;
+}
