--- a/app/views/assign/index.html.erb
+++ b/app/views/assign/index.html.erb
@@ -1,15 +1,31 @@
-<h1><%= @oppty.opptyName%></h1>
-<h2>Assigned Writers</h2>
-<%@assigned_writers.each do |w|%>
-    <h3><%=w.user.name%></h3>
-<%end%>
-<h2>Not Assigned Writers</h2>
-<%@not_assigned_writers.each do |w|%>
-    <h3><%=w.name%></h3>
-    <form method="post" action= "assignUser" >
-      <input name="oppty_id" type="hidden" value="<%= @oppty.id%>">
-      <input name="user_id" type="hidden" value="<%= w.id%>">
-      <input name="authenticity_token" type="hidden" value="<%= form_authenticity_token %>">
-      <button class="btn btn-lg btn-primary btn-right" type="submit">Add</button>
-    </form>
-<%end%>
+<html>
+<body>
+	<div class="jumbotron container assigned-jumbotron col-md-12">
+		<h2 style="text-align: center; padding-top: 20px; padding-bottom: 20px;"><%= @oppty.opptyName%></h2>
+		<div class="col-md-6">
+			<h3 style="padding-bottom: 20px;">Assigned Writers</h3>
+			<%@assigned_writers.each do |w|%>
+				<div class="col-md-12">
+			    	<p><%=w.user.name%></p>
+				</div>
+			<%end%>
+		</div>
+		<div class="col-md-6">
+			<h3 style="padding-bottom: 20px;">Not Assigned Writers</h3>
+			<%@not_assigned_writers.each do |w|%>
+				<div class="col-md-6">
+			    	<p><%=w.name%></p>
+				</div>
+				<div class="col-md-6">
+				    <form method="post" action= "assignUser" >
+				      <input name="oppty_id" type="hidden" value="<%= @oppty.id%>">
+				      <input name="user_id" type="hidden" value="<%= w.id%>">
+				      <input name="authenticity_token" type="hidden" value="<%= form_authenticity_token %>">
+				      <button class="btn btn-lg btn-primary btn-right" type="submit">Assign</button>
+				    </form>
+				</div>
+			<%end%>
+		</div>
+	</div>
+</body>
+</html>
