--- a/app/views/oppties/_form.html.erb
+++ b/app/views/oppties/_form.html.erb
@@ -11,36 +11,36 @@
     </div>
   <% end %>
 
-  <div class="field">
+  <div class="field field-title">
     <%= f.label :"SL Director"  %><br>
     <%= f.text_field :slDir %>
   </div>
-  <div class="field">
+  <div class="field field-title">
     <%= f.label :"Lead Estimator" %><br>
     <%= f.text_field :leadEstim %>
   </div>
-  <div class="field">
+  <div class="field field-title">
     <%= f.label :Engaged %><br>
     <%= f.text_field :engaged %>
   </div>
-  <div class="field">
+  <div class="field field-title">
     <%= f.label :Solution %><br>
     <%= f.text_field :solution %>
   </div>
-  <div class="field">
+  <div class="field field-title">
     <%= f.label :Estimate %><br>
     <%= f.text_field :estimate %>
   </div>
-    <div class="field">
+    <div class="field field-title">
       <%= f.label :"SL Architecture" %><br>
       <%= f.text_field :slArch%>
     </div>
-  <div class="field">
+  <div class="field field-title">
     <%= f.label :"SL Comments" %><br>
     <%= f.text_field :slComments %>
   </div>
 
-  <div class="actions">
+  <div class="actions field-title">
     <%= f.submit %>
   </div>
 <% end %>
