--- a/app/assets/stylesheets/upload_crm.css.scss
+++ b/app/assets/stylesheets/upload_crm.css.scss
@@ -31,7 +31,6 @@
 	min-height: 400px !important;
 }
 
-
 .page-wrapper {
 	width: 100% !important;
 	min-height: 1px;
@@ -53,8 +52,11 @@
 .column-title {
 	font-family: verdana, arial, helvetica, sans-serif;
     padding-top: 10px;
-    //text-align: center;
     font-size: 32px;
 	margin-bottom: 20px !important;
+}
+
+.btn-padded {
+	margin-right: 20px !important;
 }
 
