--- a/app/views/assign/index.html.erb
+++ b/app/views/assign/index.html.erb
@@ -1,31 +1,70 @@
 <html>
 <body>
 	<div class="jumbotron container assigned-jumbotron col-md-12">
-		<h2 style="text-align: center; padding-top: 20px; padding-bottom: 20px;"><%= @oppty.opptyName%></h2>
-		<div class="col-md-6">
-			<h3 style="padding-bottom: 20px;">Assigned Writers</h3>
-			<%@assigned_writers.each do |w|%>
-				<div class="col-md-12">
-			    	<p><%=w.user.name%></p>
-				</div>
-			<%end%>
-		</div>
+		<h2 style="text-align: center; padding-top: 20px; padding-bottom: 20px;font-family: verdana, arial, helvetica, sans-serif;font-size: 32px;">
+			<%= @oppty.opptyName%></h2>
+		
 		<div class="col-md-6">
 			<h3 style="padding-bottom: 20px;">Not Assigned Writers</h3>
-			<%@not_assigned_writers.each do |w|%>
-				<div class="col-md-6">
-			    	<p><%=w.name%></p>
-				</div>
-				<div class="col-md-6">
-				    <form method="post" action= "assignUser" >
-				      <input name="oppty_id" type="hidden" value="<%= @oppty.id%>">
-				      <input name="user_id" type="hidden" value="<%= w.id%>">
-				      <input name="authenticity_token" type="hidden" value="<%= form_authenticity_token %>">
-				      <button class="btn btn-lg btn-primary btn-right" type="submit">Assign</button>
-				    </form>
-				</div>
-			<%end%>
+			<div class="outer-not-assigned-row" id="outer-not-assigned-row">
+				<%@not_assigned_writers.each do |w|%>
+					<div class="col-md-12 not-assigned-row" id="not-assigned-row">
+						<div class="col-md-6 row-item">
+					    	<p class="writer-name"><%=w.name%></p>
+						</div>
+						<div class="col-md-6 row-item">
+						    <form method="post" action= "assignUser" >
+						      <input name="oppty_id" type="hidden" value="<%= @oppty.id%>">
+						      <input name="user_id" type="hidden" value="<%= w.id%>">
+						      <input name="authenticity_token" type="hidden" value="<%= form_authenticity_token %>">
+						      <button class="btn btn-lg btn-primary btn-right" type="submit">Assign</button>
+						    </form>
+						</div>
+					</div>
+				<%end%>
+			</div>
+		</div>
+
+		<div class="col-md-6">
+			<h3 style="padding-bottom: 20px;">Assigned Writers</h3>
+			<div class="outer-assigned-row" id="outer-assigned-row">
+				<%@assigned_writers.each do |w|%>
+					<div class="col-md-12 assigned-row" id="assigned-row">
+						<div class="col-md-6 row-item">
+				    		<p class="writer-name"><%=w.user.name%></p>
+						</div>
+						<div class="col-md-6 row-item">
+						    <form method="post" action= "assignUser" >
+						      <input name="oppty_id" type="hidden" value="<%= @oppty.id%>">
+						      <input name="user_id" type="hidden" value="<%= w.id%>">
+						      <input name="authenticity_token" type="hidden" value="<%= form_authenticity_token %>">
+						      <button class="btn btn-lg btn-primary btn-right" 
+						      style="background-color: red;" type="submit">Un-Assign
+						  	  </button>
+						    </form>
+						</div>
+					</div>
+				<%end%>
+			</div>
 		</div>
 	</div>
+
+	<%= javascript_include_tag('jquery.slimscroll.min.js') %>
+
+	<script>
+		$(function(){
+    		$('#outer-not-assigned-row').slimScroll({
+        		height: '336px'
+    		});
+		});
+
+		$(function(){
+    		$('#outer-assigned-row').slimScroll({
+        		height: '336px'
+    		});
+		});
+	</script>
 </body>
+
+
 </html>
