--- a/app/views/assign/index.html.erb
+++ b/app/views/assign/index.html.erb
@@ -17,7 +17,7 @@
 						      <input name="oppty_id" type="hidden" value="<%= @oppty.id%>">
 						      <input name="user_id" type="hidden" value="<%= w.id%>">
 						      <input name="authenticity_token" type="hidden" value="<%= form_authenticity_token %>">
-						      <button class="btn btn-lg btn-primary btn-right" type="submit">Assign</button>
+						      <button class="btn btn-lg btn-primary btn-right assign-button" type="submit">Assign</button>
 						    </form>
 						</div>
 					</div>
