--- a/app/assets/stylesheets/allocated_tasks.css.scss
+++ b/app/assets/stylesheets/allocated_tasks.css.scss
@@ -74,3 +74,20 @@
 	width: 100% !important;
 	margin: 0px !important;
 }
+
+
+.red-cross {
+	background-color: red !important;
+	margin:0; 
+	padding-top:10px !important; 
+	padding-left: 0px !important; 
+	padding-right:20px !important; 
+	border:0px !important;
+	border-color: transparent !important;
+	a {
+		color: red !important;
+		&:visited {
+		color: red !important;
+		}
+	}
+}
